# reasoning_gemma

./: README.md  pyproject.toml
configs/rl/: math_logic.toml
scripts/: run_sft.py
src/reasoning_gemma/: __init__.py
src/reasoning_gemma.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
